--- a/Resources/Interface/MainMenu.xib
+++ b/Resources/Interface/MainMenu.xib
@@ -517,11 +517,30 @@
 									<reference key="NSOnImage" ref="1033313550"/>
 									<reference key="NSMixedImage" ref="310636482"/>
 								</object>
+								<object class="NSMenuItem" id="234419045">
+									<reference key="NSMenu" ref="147685390"/>
+									<string key="NSTitle">Clean</string>
+									<string key="NSKeyEquiv">k</string>
+									<int key="NSKeyEquivModMask">1048576</int>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="1033313550"/>
+									<reference key="NSMixedImage" ref="310636482"/>
+								</object>
 								<object class="NSMenuItem" id="284775126">
 									<reference key="NSMenu" ref="147685390"/>
-									<string key="NSTitle">Build &amp; Upload</string>
+									<string key="NSTitle">Run</string>
 									<string key="NSKeyEquiv">r</string>
 									<int key="NSKeyEquivModMask">1048576</int>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="1033313550"/>
+									<reference key="NSMixedImage" ref="310636482"/>
+								</object>
+								<object class="NSMenuItem" id="500018095">
+									<reference key="NSMenu" ref="147685390"/>
+									<bool key="NSIsDisabled">YES</bool>
+									<bool key="NSIsSeparator">YES</bool>
+									<string key="NSTitle"/>
+									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="1033313550"/>
 									<reference key="NSMixedImage" ref="310636482"/>
@@ -1117,6 +1136,14 @@
 						<reference key="destination" ref="722745758"/>
 					</object>
 					<int key="connectionID">372</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">cleanSketch:</string>
+						<reference key="source" ref="1014"/>
+						<reference key="destination" ref="234419045"/>
+					</object>
+					<int key="connectionID">686</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
@@ -1724,6 +1751,8 @@
 							<reference ref="741394607"/>
 							<reference ref="202656950"/>
 							<reference ref="42288982"/>
+							<reference ref="234419045"/>
+							<reference ref="500018095"/>
 						</object>
 						<reference key="parent" ref="245352142"/>
 					</object>
@@ -1931,6 +1960,16 @@
 						<reference key="object" ref="803643798"/>
 						<reference key="parent" ref="102532616"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">685</int>
+						<reference key="object" ref="234419045"/>
+						<reference key="parent" ref="147685390"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">687</int>
+						<reference key="object" ref="500018095"/>
+						<reference key="parent" ref="147685390"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -2025,6 +2064,8 @@
 					<string>630.IBPluginDependency</string>
 					<string>631.IBPluginDependency</string>
 					<string>646.IBPluginDependency</string>
+					<string>685.IBPluginDependency</string>
+					<string>687.IBPluginDependency</string>
 					<string>72.IBPluginDependency</string>
 					<string>73.IBPluginDependency</string>
 					<string>75.IBPluginDependency</string>
@@ -2036,6 +2077,8 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -2146,7 +2189,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">684</int>
+			<int key="maxID">687</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2256,10 +2299,12 @@
 							<string>buildAndUploadSketch:</string>
 							<string>buildFailedSheetDidEnd:</string>
 							<string>buildSketch:</string>
+							<string>cleanSketch:</string>
 							<string>openSerialMonitor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -2277,6 +2322,7 @@
 							<string>buildAndUploadSketch:</string>
 							<string>buildFailedSheetDidEnd:</string>
 							<string>buildSketch:</string>
+							<string>cleanSketch:</string>
 							<string>openSerialMonitor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -2299,6 +2345,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">buildSketch:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">cleanSketch:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -2410,35 +2460,14 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">FirstResponder</string>
 					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>addNewFile:</string>
-							<string>buildAndUploadSketch:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
+						<string key="NS.key.0">cleanSketch:</string>
+						<string key="NS.object.0">id</string>
 					</object>
 					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>addNewFile:</string>
-							<string>buildAndUploadSketch:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">addNewFile:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">buildAndUploadSketch:</string>
-								<string key="candidateClassName">id</string>
-							</object>
+						<string key="NS.key.0">cleanSketch:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">cleanSketch:</string>
+							<string key="candidateClassName">id</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
