--- a/ino/ino-cocoduino.egg/ino/make/Makefile.common.jinja
+++ b/ino/ino-cocoduino.egg/ino/make/Makefile.common.jinja
@@ -1,19 +1,7 @@
 
-{% macro transform_sketches(src_dir, add_to) %}
-{% set pde = src_dir|glob('*.pde', '*.ino')|filemap(e.build_dir|pjoin(src_dir|basename), '%s.cpp') %}
-{% if e.arduino_lib_version.major %}
-    {% set header = 'Arduino.h' %}
-{% else %}
-    {% set header = 'WProgram.h' %}
-{% endif %}
-{% for source, target in pde.iterpaths() %}
-{{ target }} : {{ source }}
-	@mkdir -p {{ target|dirname }}
-	@echo '#include <{{ header }}>' > $@
-	@cat {{ source }} >> $@
-{% endfor %}
-{% do add_to.extend(pde.targets()) %}
-{% endmacro %}
+{% set src_build_dir = e.build_dir|pjoin(e.src_dir|basename) %}
+
+{% macro iquote(source) %}{% if source.path.startswith(src_build_dir) %}-iquote {{e.src_dir|pjoin(source.path|relative_to(src_build_dir))|dirname}} {% endif %}{% endmacro %}
 
 {#
 vim:noexpandtab filetype=jinja
