--- a/Resources/Interface/FKGeneralPreferencesViewController.xib
+++ b/Resources/Interface/FKGeneralPreferencesViewController.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">11C74</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1138.23</string>
-		<string key="IBDocument.HIToolboxVersion">567.00</string>
+		<string key="IBDocument.SystemVersion">11D50</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2177</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">1938</string>
+			<string key="NS.object.0">2177</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSTextField</string>
@@ -53,7 +53,6 @@
 										<int key="NSvFlags">266</int>
 										<string key="NSFrame">{{15, 14}, {181, 22}}</string>
 										<reference key="NSSuperview" ref="999467251"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="10632446"/>
 										<string key="NSReuseIdentifierKey">_NS:903</string>
 										<bool key="NSEnabled">YES</bool>
@@ -92,14 +91,12 @@
 								</array>
 								<string key="NSFrame">{{1, 1}, {211, 46}}</string>
 								<reference key="NSSuperview" ref="628016778"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="115662287"/>
 								<string key="NSReuseIdentifierKey">_NS:21</string>
 							</object>
 						</array>
 						<string key="NSFrame">{{17, 126}, {213, 62}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="999467251"/>
 						<string key="NSReuseIdentifierKey">_NS:18</string>
 						<string key="NSOffsets">{0, 0}</string>
@@ -125,7 +122,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{229, 122}, {113, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="577302912"/>
 						<string key="NSReuseIdentifierKey">_NS:687</string>
 						<bool key="NSEnabled">YES</bool>
@@ -153,7 +149,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{229, 154}, {113, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="742546572"/>
 						<string key="NSReuseIdentifierKey">_NS:687</string>
 						<bool key="NSEnabled">YES</bool>
@@ -185,7 +180,6 @@
 										<int key="NSvFlags">270</int>
 										<string key="NSFrame">{{16, 52}, {157, 18}}</string>
 										<reference key="NSSuperview" ref="312285725"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="629719153"/>
 										<string key="NSReuseIdentifierKey">_NS:771</string>
 										<bool key="NSEnabled">YES</bool>
@@ -216,8 +210,6 @@
 										<int key="NSvFlags">270</int>
 										<string key="NSFrame">{{16, 12}, {288, 18}}</string>
 										<reference key="NSSuperview" ref="312285725"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:771</string>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="523919859">
@@ -242,7 +234,6 @@
 										<int key="NSvFlags">270</int>
 										<string key="NSFrame">{{16, 32}, {248, 18}}</string>
 										<reference key="NSSuperview" ref="312285725"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="860890430"/>
 										<string key="NSReuseIdentifierKey">_NS:771</string>
 										<bool key="NSEnabled">YES</bool>
@@ -266,14 +257,12 @@
 								</array>
 								<string key="NSFrame">{{1, 1}, {320, 78}}</string>
 								<reference key="NSSuperview" ref="577302912"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="654573960"/>
 								<string key="NSReuseIdentifierKey">_NS:21</string>
 							</object>
 						</array>
 						<string key="NSFrame">{{17, 16}, {322, 94}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="312285725"/>
 						<string key="NSReuseIdentifierKey">_NS:18</string>
 						<string key="NSOffsets">{0, 0}</string>
@@ -297,7 +286,6 @@
 				</array>
 				<string key="NSFrameSize">{356, 208}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="628016778"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -582,73 +570,13 @@
 			<nil key="sourceID"/>
 			<int key="maxID">56</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FKGeneralPreferencesViewController</string>
-					<string key="superclassName">NSViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="changeSketchbookLocation:">id</string>
-						<string key="toggleAutocomplete:">id</string>
-						<string key="toggleClosingBrace:">id</string>
-						<string key="toggleClosingParenthesis:">id</string>
-						<string key="useDefaultSketchBookLocation:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="changeSketchbookLocation:">
-							<string key="name">changeSketchbookLocation:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="toggleAutocomplete:">
-							<string key="name">toggleAutocomplete:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="toggleClosingBrace:">
-							<string key="name">toggleClosingBrace:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="toggleClosingParenthesis:">
-							<string key="name">toggleClosingParenthesis:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="useDefaultSketchBookLocation:">
-							<string key="name">useDefaultSketchBookLocation:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="autocompleteButton">NSButton</string>
-						<string key="closingBraceButton">NSButton</string>
-						<string key="closingParenthesisButton">NSButton</string>
-						<string key="sketchbookPathTextField">NSTextField</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="autocompleteButton">
-							<string key="name">autocompleteButton</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="closingBraceButton">
-							<string key="name">closingBraceButton</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="closingParenthesisButton">
-							<string key="name">closingParenthesisButton</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sketchbookPathTextField">
-							<string key="name">sketchbookPathTextField</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FKGeneralPreferencesViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.InterfaceBuilder3</string>
+			<real value="4000" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
